--- a/64030313/9.1 Constructor.md
+++ b/64030313/9.1 Constructor.md
@@ -42,6 +42,8 @@ namespace ConstructorExample
     }
 }
 ```
+### ผลการรันโปรแกรม
+![image](https://user-images.githubusercontent.com/115037574/235774857-2bba5163-1153-4efc-b404-1c8cd7c4f8aa.png)
 
 ## 9.1.2 Constructors with Parameters
 
@@ -90,6 +92,8 @@ namespace ConstructorExample
     }
 }
 ```
+### ผลการรันโปรแกรม
+![image](https://user-images.githubusercontent.com/115037574/235774954-8b9a8dfd-94c1-4d43-8e62-32e93c39d422.png)
 
 ## 9.1.3 การใช้ this() เพื่อเรียก constructor
 
@@ -142,6 +146,8 @@ namespace ConstructorExample
     }
 }
 ```
+### ผลการรันโปรแกรม
+![image](https://user-images.githubusercontent.com/115037574/235775047-6f825128-a2cb-427e-a6fd-b3b691374e3d.png)
 
 ## 9.1.4 Static constructor
 
@@ -205,6 +211,8 @@ namespace ConstructorExample
     }
 }
 ```
+### ผลการรันโปรแกรม
+![image](https://user-images.githubusercontent.com/115037574/235775138-4c93215e-cb37-43f9-9d53-0bef3304b883.png)
 
 ## 9.1.5 Object initializer
 
@@ -247,9 +255,23 @@ namespace ConstructorExample
 }
 
 ```
+### ผลการรันโปรแกรม
+![image](https://user-images.githubusercontent.com/115037574/235775231-031ca3f5-89f1-4273-8270-eab96247ebf1.png)
 
 ## คำถาม
 
 1. ท่านคิดว่าวิธีการทำ constructor overloading แล้วเรียกต่อกันเป็นทอดๆ จะช่วยอำนวยความสะดวกอะไรในการเขียนโปรแกรมของท่าน
-
+```
+สามารถสร้าง object ได้หลายแบบตามความต้องการของโปรแกรม เช่น ถ้าเรามีคลาส Person และต้องการสร้าง object โดยมีการระบุชื่อและอายุของบุคคล โดย constructor ก็จะต้องมีพารามิเตอร์เหล่านี้ในการรับค่า แต่ถ้าเราไม่ต้องการระบุชื่อของบุคคลเราสามารถสร้าง constructor แบบที่ไม่มีพารามิเตอร์ชื่อได้ด้วยการทำ Constructor Overloading ซึ่งจะช่วยลดเวลาและลดความซับซ้อนของโค้ดในการเขียนโปรแกรมได้
+```
 2. เปรียบเทียบประโยชน์และข้อจำกัด ในการใช้ overloaded constructor และ Object initializer
+   - Overloaded constructor
+     - ประโยชน์
+       - การกำหนดค่าเริ่มต้นของอ็อบเจกต์เมื่อสร้างขึ้นมา โดยสามารถกำหนดค่าได้หลายๆ แบบ โดยที่ไม่ต้องเขียนโค้ดเพิ่มเติมในภายหลัง
+     - ข้อจำกัด
+       - หากมีจำนวน constructor มากเกินไปอาจทำให้เกิดความสับสนในการเลือกใช้ constructor ที่ถูกต้อง และหากต้องการเพิ่มคุณสมบัติต่อไป อาจจะต้องเพิ่ม constructor ใหม่ ซึ่งอาจทำให้โค้ดยืดหยุ่นไม่ได้
+   - Object initializer
+     - ประโยชน์
+       - ให้การกำหนดค่าเริ่มต้นของอ็อบเจกต์ได้อย่างง่ายดาย และยังสามารถกำหนดค่าของ property ได้หลาย property ในครั้งเดียว
+     - ข้อจำกัด
+       - ไม่สามารถกำหนดค่าแบบเงื่อนไขได้ และไม่สามารถกำหนดค่า property ที่ไม่มี setter ได้ นอกจากนี้ Object initializer ยังไม่สามารถกำหนดค่าอื่นๆ ที่เกี่ยวข้องกับอ็อบเจกต์ได้ เช่น การกำหนดค่า field และ method
