--- a/64030313/9.2 Indexer.md
+++ b/64030313/9.2 Indexer.md
@@ -83,6 +83,8 @@ namespace IndexerExample
     }
 }
 ```
+### ผลการรันโปรแกรม
+![image](https://user-images.githubusercontent.com/115037574/235776242-8fcf6589-a6a6-4509-9a9b-d3f62dd43d89.png)
 
 ## 9.2.2 การใช้งาน Indexer
 
@@ -124,6 +126,8 @@ namespace IndexerExample
     }
 }
 ```
+### ผลการรันโปรแกรม
+![image](https://user-images.githubusercontent.com/115037574/235776305-2bf442f7-749a-4b39-a02c-bb0187211142.png)
 
 ## 9.2.3 Indexer return ค่าแบบ tuple
 
@@ -173,6 +177,8 @@ namespace IndexerExample
     }
 }
 ```
+### ผลการรันโปแกรม
+![image](https://user-images.githubusercontent.com/115037574/235776373-6e063031-c926-4a2d-80b5-4294fde32f6c.png)
 
 # 9.2.4 indexer overloading
 
@@ -248,7 +254,14 @@ namespace IndexerExample
     }
 }
 ```
+### ผลการรันโปรแกรม
+![image](https://user-images.githubusercontent.com/115037574/235776457-57997aa0-53b4-44d0-9452-3a20e03dc37b.png)
 
 # คำถาม
 
 1. ท่านคิดว่าสามารถนำ Indexer ไปใช้ในงานอะไรได้บ้าง อธิบายตัวอย่าง (ไม่ต้องเขียน code)
+```
+เป็นการนำพารามิเตอร์ตัวเลขเข้ามาเข้าถึงข้อมูลในอาร์เรย์ของคลาสหรือโครงสร้างข้อมูล
+โดยสามารถใช้ Indexer เพื่อเข้าถึงและดึงข้อมูลที่ต้องการออกมาเป็นเวลา O(1)
+จะช่วยให้โปรแกรมทำงานได้อย่างมีประสิทธิภาพ
+```
