--- a/64030161/9.2 Indexer.md
+++ b/64030161/9.2 Indexer.md
@@ -83,6 +83,7 @@ namespace IndexerExample
     }
 }
 ```
+![image](https://user-images.githubusercontent.com/115066261/235986085-77155888-0f24-4e7f-90de-7f65278c7a21.png)
 
 ## 9.2.2 การใช้งาน Indexer
 
@@ -124,6 +125,7 @@ namespace IndexerExample
     }
 }
 ```
+<img width="630" alt="Screenshot 2566-05-03 at 23 57 45" src="https://user-images.githubusercontent.com/115066261/235986814-7bbc4952-fd05-4b09-87fa-d0b1e104e43a.png">
 
 ## 9.2.3 Indexer return ค่าแบบ tuple
 
@@ -173,6 +175,7 @@ namespace IndexerExample
     }
 }
 ```
+![image](https://user-images.githubusercontent.com/115066261/235987090-2e94b2fb-3dfd-470b-95fd-9d7f7d836294.png)
 
 # 9.2.4 indexer overloading
 
@@ -248,7 +251,11 @@ namespace IndexerExample
     }
 }
 ```
+![image](https://user-images.githubusercontent.com/115066261/235987991-fee7aa7e-052d-447a-8a43-134a64e8f63a.png)
 
 # คำถาม
 
 1. ท่านคิดว่าสามารถนำ Indexer ไปใช้ในงานอะไรได้บ้าง อธิบายตัวอย่าง (ไม่ต้องเขียน code)
+```
+งานที่จำเป้นต้องดึงข้อมูลจำนวนมากออกมาแสดง เช่น โปรแกรมเช็คสต๊อคสินค้าใช้ indexer เพื่อค้นหาข้อมูลจากฐานข้อมูล
+```
