--- a/64030312/9.1 Constructor.md
+++ b/64030312/9.1 Constructor.md
@@ -42,6 +42,7 @@ namespace ConstructorExample
     }
 }
 ```
+![image](https://user-images.githubusercontent.com/115066208/236297712-ba92f166-b406-46df-a260-76b9f41fcdae.png)
 
 ## 9.1.2 Constructors with Parameters
 
@@ -90,6 +91,7 @@ namespace ConstructorExample
     }
 }
 ```
+![image](https://user-images.githubusercontent.com/115066208/236298858-45ab0ef2-8ce3-4f06-92c7-7da74ccac7cc.png)
 
 ## 9.1.3 การใช้ this() เพื่อเรียก constructor
 
@@ -142,6 +144,7 @@ namespace ConstructorExample
     }
 }
 ```
+![image](https://user-images.githubusercontent.com/115066208/236299257-52c850ef-a260-4524-a74d-5313b2240661.png)
 
 ## 9.1.4 Static constructor
 
@@ -205,6 +208,7 @@ namespace ConstructorExample
     }
 }
 ```
+![image](https://user-images.githubusercontent.com/115066208/236299433-d1c222c1-2d9f-42f7-b7d9-4cca298857bc.png)
 
 ## 9.1.5 Object initializer
 
@@ -247,9 +251,27 @@ namespace ConstructorExample
 }
 
 ```
+![image](https://user-images.githubusercontent.com/115066208/236299774-10142e1e-4218-4ff2-ade0-1a2a4d6684ba.png)
 
 ## คำถาม
 
 1. ท่านคิดว่าวิธีการทำ constructor overloading แล้วเรียกต่อกันเป็นทอดๆ จะช่วยอำนวยความสะดวกอะไรในการเขียนโปรแกรมของท่าน
-
+```cs
+  ช่วยให้โปรแกรมทำงานได้มีประสิทธิภาพมากขึ้น
+```
 2. เปรียบเทียบประโยชน์และข้อจำกัด ในการใช้ overloaded constructor และ Object initializer
+```cs
+ overloaded constructor
+     ประโยชน์
+     - สามารถรองรับการป้อนค่าได้หลากหลาย
+     ข้อจำกัด
+     - โปรแกรมอาจจะทำงานได้ช้าลงหากมี overloaded constructor เป็นจำนวนมากเพราะจะทำให้โค้ดมีบรรทัดมากขึ้น
+     - โค้ดยาวและอ่านยาก
+ Object initializer
+     ประโยชน์
+     - ทำให้โค้ดสั้นลง อ่านง่าย
+     - ลดความผิดพลาดในการกำหนด properties โดยจพมีการตรวจสอบความถูกต้องก่อนกำหนดค่า
+     ข้อจำกัด
+     - ต้องกำหนดค่าทุก property ตอนที่สร้าง
+     - อาจสร้าง confusion ในกรณีที่มี property ที่มีชื่อซ้ำกันใน base class และ derived class หรือในกรณีที่มีการ inherit property จาก interface ที่มีชื่อซ้ำกัน
+```
