--- a/64030312/9.2 Indexer.md
+++ b/64030312/9.2 Indexer.md
@@ -83,6 +83,7 @@ namespace IndexerExample
     }
 }
 ```
+![image](https://user-images.githubusercontent.com/115066208/236300407-7cd2e009-606a-49ea-b030-624bca07478a.png)
 
 ## 9.2.2 การใช้งาน Indexer
 
@@ -124,6 +125,7 @@ namespace IndexerExample
     }
 }
 ```
+![image](https://user-images.githubusercontent.com/115066208/236300597-6538833c-6219-44ef-b061-b809cfa1b35a.png)
 
 ## 9.2.3 Indexer return ค่าแบบ tuple
 
@@ -173,6 +175,7 @@ namespace IndexerExample
     }
 }
 ```
+![image](https://user-images.githubusercontent.com/115066208/236300703-a1b20a09-a410-4454-bfa9-335ad31147c1.png)
 
 # 9.2.4 indexer overloading
 
@@ -248,7 +251,11 @@ namespace IndexerExample
     }
 }
 ```
+![image](https://user-images.githubusercontent.com/115066208/236300816-fe70a09a-c0f8-47cf-9f04-b48d25c19f89.png)
 
 # คำถาม
 
 1. ท่านคิดว่าสามารถนำ Indexer ไปใช้ในงานอะไรได้บ้าง อธิบายตัวอย่าง (ไม่ต้องเขียน code)
+```cs
+งานที่จำเป็นต้องใช้ข้อมูลจำนวนมากออกมาแสดง
+```
