--- a/64030090/9.1 Constructor.md
+++ b/64030090/9.1 Constructor.md
@@ -42,6 +42,8 @@ namespace ConstructorExample
     }
 }
 ```
+![image](https://user-images.githubusercontent.com/115066356/236398583-5deab4c6-1125-4113-8b1f-21bdc760c962.png)
+
 
 ## 9.1.2 Constructors with Parameters
 
@@ -90,6 +92,8 @@ namespace ConstructorExample
     }
 }
 ```
+![image](https://user-images.githubusercontent.com/115066356/236398795-faac2386-7aba-4028-a49e-ab309cc1055f.png)
+
 
 ## 9.1.3 การใช้ this() เพื่อเรียก constructor
 
@@ -142,6 +146,8 @@ namespace ConstructorExample
     }
 }
 ```
+![image](https://user-images.githubusercontent.com/115066356/236398964-efe5d19e-89bc-404b-b5be-9bb9209c2ea8.png)
+
 
 ## 9.1.4 Static constructor
 
@@ -205,6 +211,8 @@ namespace ConstructorExample
     }
 }
 ```
+![image](https://user-images.githubusercontent.com/115066356/236399226-5785bd53-9338-4642-b4f7-b6fae158b69c.png)
+
 
 ## 9.1.5 Object initializer
 
@@ -247,9 +255,27 @@ namespace ConstructorExample
 }
 
 ```
+![image](https://user-images.githubusercontent.com/115066356/236399426-c52f346c-099f-4a96-85d4-6169c378bc8b.png)
 
 ## คำถาม
 
 1. ท่านคิดว่าวิธีการทำ constructor overloading แล้วเรียกต่อกันเป็นทอดๆ จะช่วยอำนวยความสะดวกอะไรในการเขียนโปรแกรมของท่าน
-
+```
+  ช่วยให้โปรแกรมทำงานได้มีประสิทธิภาพมากขึ้น    
+```
 2. เปรียบเทียบประโยชน์และข้อจำกัด ในการใช้ overloaded constructor และ Object initializer
+```
+ overloaded constructor
+     ประโยชน์
+     - สามารถรองรับการป้อนค่าได้หลากหลาย
+     ข้อจำกัด
+     - โปรแกรมอาจจะทำงานได้ช้าลงหากมี overloaded constructor เป็นจำนวนมากเพราะจะทำให้โค้ดมีบรรทัดมากขึ้น
+     - โค้ดยาวและอ่านยาก
+ Object initializer
+     ประโยชน์
+     - ทำให้โค้ดสั้นลง อ่านง่าย
+     - ลดความผิดพลาดในการกำหนด properties โดยจพมีการตรวจสอบความถูกต้องก่อนกำหนดค่า
+     ข้อจำกัด
+     - ต้องกำหนดค่าทุก property ตอนที่สร้าง
+     - อาจสร้าง confusion ในกรณีที่มี property ที่มีชื่อซ้ำกันใน base class และ derived class หรือในกรณีที่มีการ inherit property จาก interface ที่มีชื่อซ้ำกัน
+```
