--- a/64030090/9.2 Indexer.md
+++ b/64030090/9.2 Indexer.md
@@ -83,6 +83,7 @@ namespace IndexerExample
     }
 }
 ```
+![image](https://user-images.githubusercontent.com/115066356/236400193-fa501121-d8d7-4926-8a1b-c38db6f1fea2.png)
 
 ## 9.2.2 การใช้งาน Indexer
 
@@ -124,6 +125,8 @@ namespace IndexerExample
     }
 }
 ```
+![image](https://user-images.githubusercontent.com/115066356/236400437-8f70e34d-ce88-485a-9ab9-746642925dc5.png)
+
 
 ## 9.2.3 Indexer return ค่าแบบ tuple
 
@@ -173,6 +176,7 @@ namespace IndexerExample
     }
 }
 ```
+![image](https://user-images.githubusercontent.com/115066356/236400616-2e7b92de-1e63-4b88-92b0-8576c2673f55.png)
 
 # 9.2.4 indexer overloading
 
@@ -248,7 +252,11 @@ namespace IndexerExample
     }
 }
 ```
+![image](https://user-images.githubusercontent.com/115066356/236400768-b495b8d2-bd9e-4cd8-ba76-7d8450c7b8ee.png)
 
 # คำถาม
 
 1. ท่านคิดว่าสามารถนำ Indexer ไปใช้ในงานอะไรได้บ้าง อธิบายตัวอย่าง (ไม่ต้องเขียน code)
+```
+การแสดงผลที่ใช้ข้อมูลจำนวนมากออกมาแสดง
+```
