--- a/64030192/9.1 Constructor.md
+++ b/64030192/9.1 Constructor.md
@@ -42,6 +42,7 @@ namespace ConstructorExample
     }
 }
 ```
+![image](https://user-images.githubusercontent.com/115066298/236557618-ef5adfdc-1191-4084-afa6-abbef7ee855f.png)
 
 ## 9.1.2 Constructors with Parameters
 
@@ -90,6 +91,7 @@ namespace ConstructorExample
     }
 }
 ```
+![image](https://user-images.githubusercontent.com/115066298/236557750-b65e97a7-9e65-4eb9-a804-00df42e24cbf.png)
 
 ## 9.1.3 การใช้ this() เพื่อเรียก constructor
 
@@ -142,6 +144,7 @@ namespace ConstructorExample
     }
 }
 ```
+![image](https://user-images.githubusercontent.com/115066298/236557857-7b16a7a2-78d5-4db9-ae83-48e05e5f7f15.png)
 
 ## 9.1.4 Static constructor
 
@@ -205,6 +208,7 @@ namespace ConstructorExample
     }
 }
 ```
+![image](https://user-images.githubusercontent.com/115066298/236557910-fabdacd4-0574-40c8-bc94-873704f6c51f.png)
 
 ## 9.1.5 Object initializer
 
@@ -247,9 +251,26 @@ namespace ConstructorExample
 }
 
 ```
+![image](https://user-images.githubusercontent.com/115066298/236557993-82a3aa0a-f825-4376-b5d8-f0a8be5db08f.png)
 
 ## คำถาม
 
 1. ท่านคิดว่าวิธีการทำ constructor overloading แล้วเรียกต่อกันเป็นทอดๆ จะช่วยอำนวยความสะดวกอะไรในการเขียนโปรแกรมของท่าน
-
+```
+1. ลดความซับซ้อนของโค้ด
+2. ประหยัดเวลาในการเขียน
+3. เพิ่มความยืดหยุ่นในการใช้งาน
+```
 2. เปรียบเทียบประโยชน์และข้อจำกัด ในการใช้ overloaded constructor และ Object initializer
+- ประโยชน์ของ Overloaded constructor
+  - ช่วยให้เราสร้างออบเจ็กต์ได้หลายแบบในการเรียกใช้งาน constructor เดียวกัน โดยการส่งค่าพารามิเตอร์ต่างกันได้
+  - ช่วยลดการซ้ำซ้อนของโค้ดเนื่องจากเราสามารถเขียน constructor ที่ใช้ร่วมกันได้และเพิ่มความยืดหยุ่นให้กับโค้ด
+- ข้อจำกัดของ Overloaded constructor
+  - มีโค้ดที่ซับซ้อนกว่า Object initializer เนื่องจากจะต้องมีการสร้าง constructor ที่ใช้ร่วมกันได้หลายแบบ
+  - ส่งผลให้โค้ดมีขนาดใหญ่ขึ้นเนื่องจากต้องสร้าง method หลายๆ ตัวเพื่อรองรับการ overloading
+- ประโยชน์ของ Object initializer
+  - ช่วยให้เราสร้างออบเจ็กต์ได้ง่ายและสะดวกขึ้น เนื่องจากไม่ต้องสร้าง constructor และส่งค่าพารามิเตอร์เหมือนกับ overloaded constructor
+  - ช่วยลดการซ้ำซ้อนของโค้ดเนื่องจากสามารถกำหนดค่าตัวแปรต่างๆ ใน object initializer ได้ในเวลาเดียวกัน
+- ข้อจำกัดของ Object initializer
+  - ไม่สามารถส่งค่า default value ได้ เนื่องจากต้องกำหนดค่าตัวแปรให้แน่ชัดใน object initializer
+  - ไม่สามารถกำหนดค่าตัวแปรที่เป็น private ใน class ได้
