--- a/64030192/9.2 Indexer.md
+++ b/64030192/9.2 Indexer.md
@@ -83,6 +83,7 @@ namespace IndexerExample
     }
 }
 ```
+![image](https://user-images.githubusercontent.com/115066298/236559030-898233ff-b589-42a9-acdc-f4e8f7c6ff6c.png)
 
 ## 9.2.2 การใช้งาน Indexer
 
@@ -124,6 +125,7 @@ namespace IndexerExample
     }
 }
 ```
+![image](https://user-images.githubusercontent.com/115066298/236559086-9a259455-d009-42f6-b444-05baea4aab8b.png)
 
 ## 9.2.3 Indexer return ค่าแบบ tuple
 
@@ -173,6 +175,7 @@ namespace IndexerExample
     }
 }
 ```
+![image](https://user-images.githubusercontent.com/115066298/236559125-d83139fe-3da4-489f-80b9-6ca493fb135d.png)
 
 # 9.2.4 indexer overloading
 
@@ -248,7 +251,13 @@ namespace IndexerExample
     }
 }
 ```
+![image](https://user-images.githubusercontent.com/115066298/236559187-f462734b-4acd-4ec4-a082-562c196d06a4.png)
 
 # คำถาม
 
 1. ท่านคิดว่าสามารถนำ Indexer ไปใช้ในงานอะไรได้บ้าง อธิบายตัวอย่าง (ไม่ต้องเขียน code)
+```
+1. ใช้ Indexer ในการเข้าถึงข้อมูลใน List หรือ Array ได้เร็วขึ้น เนื่องจากไม่ต้องใช้ method ที่ช้ากว่า เช่น getAt
+2. ใช้ Indexer เพื่อเข้าถึงข้อมูลใน dictionary ได้สะดวกขึ้น เนื่องจากไม่ต้องใช้ method ชื่อว่า getKey เพื่อเข้าถึง key และ getValue เพื่อเข้าถึง value
+3. ใช้ Indexer เพื่อเข้าถึงข้อมูลใน class ที่เกี่ยวข้องกับคอลเล็กชันได้สะดวกขึ้น เช่น สร้าง class ที่เก็บข้อมูลของร้านค้า โดยใช้ Indexer เพื่อเข้าถึงข้อมูลสินค้าในร้านค้า
+```
