--- a/64030238/9.1 Constructor.md
+++ b/64030238/9.1 Constructor.md
@@ -42,6 +42,7 @@ namespace ConstructorExample
     }
 }
 ```
+![image](https://user-images.githubusercontent.com/103983336/236624318-aaa49b6a-3792-4107-9e22-88a62562b965.png)
 
 ## 9.1.2 Constructors with Parameters
 
@@ -90,6 +91,8 @@ namespace ConstructorExample
     }
 }
 ```
+![image](https://user-images.githubusercontent.com/103983336/236625133-f79edc60-ee3e-4d43-a4d4-3ba088f43c1e.png)
+
 
 ## 9.1.3 การใช้ this() เพื่อเรียก constructor
 
@@ -142,6 +145,7 @@ namespace ConstructorExample
     }
 }
 ```
+![image](https://user-images.githubusercontent.com/103983336/236624602-c99eda06-2d16-4803-9ab4-321ec7497f2e.png)
 
 ## 9.1.4 Static constructor
 
@@ -205,6 +209,7 @@ namespace ConstructorExample
     }
 }
 ```
+![image](https://user-images.githubusercontent.com/103983336/236624698-a3a69ed0-6060-4075-a979-5f1191e7d928.png)
 
 ## 9.1.5 Object initializer
 
@@ -247,9 +252,30 @@ namespace ConstructorExample
 }
 
 ```
+![image](https://user-images.githubusercontent.com/103983336/236624792-34eb62ef-d5e4-49a0-b41a-1f6560b2c85b.png)
+
 
 ## คำถาม
 
 1. ท่านคิดว่าวิธีการทำ constructor overloading แล้วเรียกต่อกันเป็นทอดๆ จะช่วยอำนวยความสะดวกอะไรในการเขียนโปรแกรมของท่าน
-
+```
+ช่วยให้โปรแกรมทำงานได้มีประสิทธิภาพมากขึ้นโดยสามารถรับค่าที่หลากหลายได้และไม่ error หากรับค่าเกินที่กำหนดแต่แลกมาด้วยความที่โปรแกรมอาจจะช้าเนื่องจากต้องรันโค้ดหลายบรรทัดมากขึ้น
+```
 2. เปรียบเทียบประโยชน์และข้อจำกัด ในการใช้ overloaded constructor และ Object initializer
+```
+ overloaded constructor
+     ประโยชน์
+     - สามารถรองรับการป้อนค่าได้หลากหลาย
+     ข้อจำกัด
+     - โปรแกรมอาจจะทำงานได้ช้าลงหากมี overloaded constructor เป็นจำนวนมากเพราะจะทำให้โค้ดมีบรรทัดมากขึ้น
+     - โค้ดยาวและอ่านยาก
+ Object initializer
+     ประโยชน์
+     - ทำให้โค้ดสั้นลง อ่านง่าย
+     - ลดความผิดพลาดในการกำหนด properties โดยจพมีการตรวจสอบความถูกต้องก่อนกำหนดค่า
+     ข้อจำกัด
+     - ต้องกำหนดค่าทุก property ตอนที่สร้าง
+     - อาจสร้าง confusion ในกรณีที่มี property ที่มีชื่อซ้ำกันใน base class และ derived class หรือในกรณีที่มีการ inherit property จาก interface ที่มีชื่อซ้ำกัน
+
+```
+    
