--- a/64030238/9.2 Indexer.md
+++ b/64030238/9.2 Indexer.md
@@ -83,6 +83,7 @@ namespace IndexerExample
     }
 }
 ```
+![image](https://user-images.githubusercontent.com/103983336/236625277-8db85c64-bd78-49f4-b901-1b930326ecf3.png)
 
 ## 9.2.2 การใช้งาน Indexer
 
@@ -124,6 +125,7 @@ namespace IndexerExample
     }
 }
 ```
+![image](https://user-images.githubusercontent.com/103983336/236625304-b93aacb7-6ee2-4be5-9cbe-bec1040b737e.png)
 
 ## 9.2.3 Indexer return ค่าแบบ tuple
 
@@ -173,6 +175,7 @@ namespace IndexerExample
     }
 }
 ```
+![image](https://user-images.githubusercontent.com/103983336/236625318-fc0684f9-7415-425b-afc9-5dc0e15566f7.png)
 
 # 9.2.4 indexer overloading
 
@@ -248,7 +251,11 @@ namespace IndexerExample
     }
 }
 ```
+![image](https://user-images.githubusercontent.com/103983336/236625332-a212b458-1001-4760-9f42-87b32917435d.png)
 
 # คำถาม
 
 1. ท่านคิดว่าสามารถนำ Indexer ไปใช้ในงานอะไรได้บ้าง อธิบายตัวอย่าง (ไม่ต้องเขียน code)
+```
+งานที่จำเป้นต้องดึงข้อมูลจำนวนมากออกมาแสดง เช่น โปรแกรมจำพวกที่ทำงานกับฐานข้อมูล
+```
