--- a/64030301 watcharaporn/9.1 Constructor.md
+++ b/64030301 watcharaporn/9.1 Constructor.md
@@ -42,6 +42,8 @@ namespace ConstructorExample
     }
 }
 ```
+![image](https://user-images.githubusercontent.com/115066329/236631064-d1ee94a1-fecd-4a99-ab34-ac51419f9420.png)
+
 
 ## 9.1.2 Constructors with Parameters
 
@@ -90,6 +92,8 @@ namespace ConstructorExample
     }
 }
 ```
+![image](https://user-images.githubusercontent.com/115066329/236631162-c0f97679-4c7c-464b-ab71-0a8785a52fc0.png)
+
 
 ## 9.1.3 การใช้ this() เพื่อเรียก constructor
 
@@ -142,6 +146,7 @@ namespace ConstructorExample
     }
 }
 ```
+![image](https://user-images.githubusercontent.com/115066329/236631193-5d63ad38-4f39-4aca-b6e1-50b278841b85.png)
 
 ## 9.1.4 Static constructor
 
@@ -205,6 +210,8 @@ namespace ConstructorExample
     }
 }
 ```
+![image](https://user-images.githubusercontent.com/115066329/236631216-5c10e4cf-3c11-4d6e-bbdd-676fe2c62997.png)
+
 
 ## 9.1.5 Object initializer
 
@@ -247,9 +254,32 @@ namespace ConstructorExample
 }
 
 ```
+![image](https://user-images.githubusercontent.com/115066329/236631245-2281eda1-52bf-4c9d-b259-052d284e2471.png)
 
-## คำถาม
 
-1. ท่านคิดว่าวิธีการทำ constructor overloading แล้วเรียกต่อกันเป็นทอดๆ จะช่วยอำนวยความสะดวกอะไรในการเขียนโปรแกรมของท่าน
+### คำถาม
 
-2. เปรียบเทียบประโยชน์และข้อจำกัด ในการใช้ overloaded constructor และ Object initializer
+ 1. ท่านคิดว่าวิธีการทำ constructor overloading แล้วเรียกต่อกันเป็นทอดๆ จะช่วยอำนวยความสะดวกอะไรในการเขียนโปรแกรมของท่าน
+    ```
+    ช่วยให้โปรแกรมทำงานได้อย่างมีประสิทธิภาพมากขึ้น
+    ```
+ 2. เปรียบเทียบประโยชน์และข้อจำกัด ในการใช้ overloaded constructor และ Object initializer
+     ```
+    overloaded constructor
+    ประโยชน์
+    -สามารถกำหนดค่าเริ่มต้นให้กับ object ได้หลายรูปแบบ โดยสามารถกำหนดจำนวนและประเภทของ parameter ต่างกันได้ จึงสามารถสร้าง object ได้อย่างสะดวกและเหมาะสมกับการใช้งานของผู้ใช้งาน
+    -ช่วยลดการเขียน code ในกรณีที่ต้องการกำหนดค่าเริ่มต้นที่แตกต่างกันขึ้นอยู่กับสถานการณ์การใช้งาน โดยไม่ต้องใช้ if-else statement หรือการเขียน method ในการกำหนดค่าเริ่มต้นแบบเฉพาะหน้า
+    -ช่วยให้โค้ดมีความกระชับและเข้าใจง่ายกว่าเมื่อใช้ Object initializer
+    ข้อจำกัด
+    -การมีจำนวน constructor ที่มากเกินไปอาจทำให้เกิดความสับสนหรือยุ่งเหยิงในการใช้งาน
+    -การสร้าง constructor ที่มี signature ที่ซับซ้อนอาจทำให้เกิดปัญหาความซับซ้อนในการเขียนโค้ด และอาจทำให้เกิดบั๊กได้ง่ายขึ้น
+    
+    Object initializer
+    ประโยชน์
+    -สามารถกำหนดค่าเริ่มต้นให้กับ object ได้โดยไม่ต้องสร้าง constructor เพิ่มเติม ทำให้เขียน code ได้สั้นและกระชับ
+    -ช่วยให้ผู้ใช้งานสามารถกำหนดค่า property ได้ง่ายและสะดวก
+    ข้อจำกัด
+    -ไม่สามารถกำหนดค่า property ที่มี modifier เป็น private หรือ protected ได้โดยตรง โดยจะต้องเขียน getter/setter method เพื่อให้ผู้ใช้งานสามารถเข้าถึงได้
+    -ไม่สามารถกำหนดค่า property ที่มีการตรวจสอบเงื่อนไขการกำหนดค่า (validation) ได้โดยตรง โดยจะต้องใช้ constructor หรือ method แบบเฉพาะหน้าเพื่อกำหนดค่าเริ่มต้น
+    -ไม่สามารถกำหนดค่า property ในลำดับที่ต้องการได้ แต่จะต้องเรียงตามลำดับที่ปรากฏในคลาส
+     ```
