--- a/059/9.1 Constructor.md
+++ b/059/9.1 Constructor.md
@@ -42,6 +42,9 @@ namespace ConstructorExample
     }
 }
 ```
+### บันทีกผล
+![image](https://user-images.githubusercontent.com/100436724/236630283-f00f8b3b-aca1-4779-bfa3-c709d3bfac99.png)
+
 
 ## 9.1.2 Constructors with Parameters
 
@@ -90,6 +93,9 @@ namespace ConstructorExample
     }
 }
 ```
+### บันทีกผล
+![image](https://user-images.githubusercontent.com/100436724/236630517-35954103-0519-41de-bb0c-d0dae03a8320.png)
+
 
 ## 9.1.3 การใช้ this() เพื่อเรียก constructor
 
@@ -142,6 +148,8 @@ namespace ConstructorExample
     }
 }
 ```
+### บันทีกผล
+![image](https://user-images.githubusercontent.com/100436724/236630553-ba777031-a7fd-4e50-98ef-35662486961a.png)
 
 ## 9.1.4 Static constructor
 
@@ -204,7 +212,10 @@ namespace ConstructorExample
         }
     }
 }
+
 ```
+### ผลการทดลอง
+![image](https://user-images.githubusercontent.com/100436724/236630576-1ddf2fcf-8734-4820-a686-e050950e1622.png)
 
 ## 9.1.5 Object initializer
 
@@ -247,9 +258,34 @@ namespace ConstructorExample
 }
 
 ```
+### บันทีกผล 
 
+![image](https://user-images.githubusercontent.com/100436724/236630593-75e80df4-4e3b-4542-93ac-02f56d110c2f.png)
+
+    
 ## คำถาม
 
 1. ท่านคิดว่าวิธีการทำ constructor overloading แล้วเรียกต่อกันเป็นทอดๆ จะช่วยอำนวยความสะดวกอะไรในการเขียนโปรแกรมของท่าน
-
+```
+การทำ constructor overloading ช่วยให้เราสามารถสร้าง object ได้หลายรูปแบบ 
+และช่วยลดการเขียนโค้ดซ้ำซ้อนได้ ทำให้การเขียนโปรแกรมสะดวกและมีประสิทธิภาพมากขึ้น
+```
 2. เปรียบเทียบประโยชน์และข้อจำกัด ในการใช้ overloaded constructor และ Object initializer
+```
+Overloaded constructor และ Object initializer เป็นวิธีการสร้าง object ในภาษา Java โดยมีข้อแตกต่างกันดังนี้
+Overloaded constructor:
+ช่วยให้ผู้ใช้งานสามารถสร้าง object ด้วยข้อมูลที่ต่างกันได้
+สามารถกำหนด default value ให้กับ parameter ได้
+มีความยืดหยุ่นในการกำหนดข้อมูลให้กับ object
+Object initializer:
+สามารถกำหนดค่าให้กับ field ของ object โดยตรงได้
+ใช้ง่ายและอ่านเข้าใจได้ง่าย
+ไม่ต้องเขียน constructor ให้มากเกินไป
+ข้อจำกัดของ Overloaded constructor:
+มีความยุ่งเหยิงในการเรียกใช้งาน constructor แตกต่างกันได้
+ถ้ามีจำนวน parameter หรือชนิดของ parameter มากเกินไป อาจทำให้โค้ดยากต่อการบริหารจัดการและการแก้ไข
+ข้อจำกัดของ Object initializer:
+ไม่สามารถกำหนด default value ให้กับ field ได้
+ไม่สามารถกำหนดค่า initial value ให้กับ final field ได้
+ไม่สามารถ validate ข้อมูลก่อนการกำหนดค่าให้กับ field ได้
+```
