--- a/64030301 watcharaporn/9.2 Indexer.md
+++ b/64030301 watcharaporn/9.2 Indexer.md
@@ -83,6 +83,8 @@ namespace IndexerExample
     }
 }
 ```
+![image](https://user-images.githubusercontent.com/115066329/236631862-4bcd4f23-aa37-4adb-8909-69bd0d24a616.png)
+
 
 ## 9.2.2 การใช้งาน Indexer
 
@@ -124,6 +126,8 @@ namespace IndexerExample
     }
 }
 ```
+![image](https://user-images.githubusercontent.com/115066329/236631890-81a11278-c2e8-4c01-91d9-baf09d4616ac.png)
+
 
 ## 9.2.3 Indexer return ค่าแบบ tuple
 
@@ -173,6 +177,8 @@ namespace IndexerExample
     }
 }
 ```
+![image](https://user-images.githubusercontent.com/115066329/236631929-f8c28a8d-a312-4862-a783-23711e023680.png)
+
 
 # 9.2.4 indexer overloading
 
@@ -248,7 +254,12 @@ namespace IndexerExample
     }
 }
 ```
+![image](https://user-images.githubusercontent.com/115066329/236631969-07c5ceff-119d-4dab-a20e-4c7e91762b39.png)
 
 # คำถาม
 
 1. ท่านคิดว่าสามารถนำ Indexer ไปใช้ในงานอะไรได้บ้าง อธิบายตัวอย่าง (ไม่ต้องเขียน code)
+```
+-งานที่จำเป็นต้องใช้ข้อมูลจำนวนมากๆออกมาแสดง   ตัวอย่าง การเขียนข้อมูลลงในอาร์เรย์หรือชุดข้อมูล 
+โดยเข้าถึงด้วย Indexer ในรูปแบบของตัวดำเนินการ [] และกำหนดค่าให้กับสมาชิกที่ต้องการ
+```
