--- a/059/9.2 Indexer.md
+++ b/059/9.2 Indexer.md
@@ -83,6 +83,8 @@ namespace IndexerExample
     }
 }
 ```
+### ผลการทดลอง
+![image](https://user-images.githubusercontent.com/100436724/236631886-94fd206b-6692-41b4-8465-3d4a1155eb21.png)
 
 ## 9.2.2 การใช้งาน Indexer
 
@@ -124,6 +126,8 @@ namespace IndexerExample
     }
 }
 ```
+### ผลการทดลอง
+![image](https://user-images.githubusercontent.com/100436724/236632115-f3d79c9e-25d7-4ac8-a94f-845c492b02bd.png)
 
 ## 9.2.3 Indexer return ค่าแบบ tuple
 
@@ -173,6 +177,8 @@ namespace IndexerExample
     }
 }
 ```
+### ผลการทดลอง
+![image](https://user-images.githubusercontent.com/100436724/236632131-6fb39bdb-8e80-4dcf-b71d-8503bee8b144.png)
 
 # 9.2.4 indexer overloading
 
@@ -248,7 +254,12 @@ namespace IndexerExample
     }
 }
 ```
+### ผลการทดลอง
+![image](https://user-images.githubusercontent.com/100436724/236632162-d6c0bf20-2fee-4cd4-a87f-2267e978dc90.png)
 
 # คำถาม
 
 1. ท่านคิดว่าสามารถนำ Indexer ไปใช้ในงานอะไรได้บ้าง อธิบายตัวอย่าง (ไม่ต้องเขียน code)
+```
+การสร้างคลาสที่เก็บค่าต่างๆของนักเรียน เช่น ชื่อ นามสกุล และคะแนนสอบ 
+```
