--- a/64030115/Labs/9.1 Constructor.md
+++ b/64030115/Labs/9.1 Constructor.md
@@ -42,6 +42,8 @@ namespace ConstructorExample
     }
 }
 ```
+![image](https://user-images.githubusercontent.com/116150897/236665894-448f2af1-ccac-43b8-85ae-4a1faffc4d14.png)
+
 
 ## 9.1.2 Constructors with Parameters
 
@@ -90,6 +92,8 @@ namespace ConstructorExample
     }
 }
 ```
+![image](https://user-images.githubusercontent.com/116150897/236665926-ce4ed6c9-d2ab-4897-a9ef-8337638f48e3.png)
+
 
 ## 9.1.3 การใช้ this() เพื่อเรียก constructor
 
@@ -102,6 +106,9 @@ namespace ConstructorExample
 
 
 รันโปรแกรมตามตัวอย่างนี้และบันทึกผล
+ 
+  
+
 
 ```cs
 using System.Drawing;
@@ -142,6 +149,9 @@ namespace ConstructorExample
     }
 }
 ```
+    ![image](https://user-images.githubusercontent.com/116150897/236666078-320e9ea1-41b6-4be4-a8c2-67a5fdfc9af4.png)
+
+
 
 ## 9.1.4 Static constructor
 
@@ -205,6 +215,8 @@ namespace ConstructorExample
     }
 }
 ```
+![image](https://user-images.githubusercontent.com/116150897/236666221-6ed452c9-8b0b-48e0-a28b-2d8b07c8737c.png)
+
 
 ## 9.1.5 Object initializer
 
@@ -247,9 +259,25 @@ namespace ConstructorExample
 }
 
 ```
+                                                                                                                                    ![image](https://user-images.githubusercontent.com/116150897/236666267-d0331dad-d4b5-45cd-a9eb-b05dcea35cb1.png)
+
 
 ## คำถาม
 
 1. ท่านคิดว่าวิธีการทำ constructor overloading แล้วเรียกต่อกันเป็นทอดๆ จะช่วยอำนวยความสะดวกอะไรในการเขียนโปรแกรมของท่าน
+ช่วยให้โปรแกรมทำงานได้มีประสิทธิภาพมากขึ้นโดยสามารถรับค่าที่หลากหลายได้และไม่ error หากรับค่าเกินที่กำหนดแต่แลกมาด้วยความที่โปรแกรมอาจจะช้าเนื่องจากต้องรันโค้ดหลายบรรทัดมากขึ้น
 
 2. เปรียบเทียบประโยชน์และข้อจำกัด ในการใช้ overloaded constructor และ Object initializer
+ overloaded constructor
+     ประโยชน์
+     - สามารถรองรับการป้อนค่าได้หลากหลาย
+     ข้อจำกัด
+     - โปรแกรมอาจจะทำงานได้ช้าลงหากมี overloaded constructor เป็นจำนวนมากเพราะจะทำให้โค้ดมีบรรทัดมากขึ้น
+     - โค้ดยาวและอ่านยาก
+ Object initializer
+     ประโยชน์
+     - ทำให้โค้ดสั้นลง อ่านง่าย
+     - ลดความผิดพลาดในการกำหนด properties โดยจพมีการตรวจสอบความถูกต้องก่อนกำหนดค่า
+     ข้อจำกัด
+     - ต้องกำหนดค่าทุก property ตอนที่สร้าง
+     - อาจสร้าง confusion ในกรณีที่มี property ที่มีชื่อซ้ำกันใน base class และ derived class หรือในกรณีที่มีการ inherit property จาก interface ที่มีชื่อซ้ำกัน
