--- a/64030115/Labs/9.2 Indexer.md
+++ b/64030115/Labs/9.2 Indexer.md
@@ -83,6 +83,8 @@ namespace IndexerExample
     }
 }
 ```
+![image](https://user-images.githubusercontent.com/116150897/236666416-8fc1924b-a2c5-449e-a3bf-0ec50f64ae50.png)
+
 
 ## 9.2.2 การใช้งาน Indexer
 
@@ -124,6 +126,8 @@ namespace IndexerExample
     }
 }
 ```
+![image](https://user-images.githubusercontent.com/116150897/236666438-4a7f7af8-61c9-46aa-bd28-2b877e11e306.png)
+
 
 ## 9.2.3 Indexer return ค่าแบบ tuple
 
@@ -173,6 +177,8 @@ namespace IndexerExample
     }
 }
 ```
+![image](https://user-images.githubusercontent.com/116150897/236666460-b2ab2976-3a7d-4174-902b-8729eef75f70.png)
+
 
 # 9.2.4 indexer overloading
 
@@ -248,7 +254,10 @@ namespace IndexerExample
     }
 }
 ```
+![image](https://user-images.githubusercontent.com/116150897/236666477-4d1b0ecd-8461-4b3e-9f86-c321960acdab.png)
 
 # คำถาม
 
 1. ท่านคิดว่าสามารถนำ Indexer ไปใช้ในงานอะไรได้บ้าง อธิบายตัวอย่าง (ไม่ต้องเขียน code)
+
+งานที่จำเป้นต้องดึงข้อมูลจำนวนมากออกมาแสดง เช่น โปรแกรมจำพวกที่ทำงานกับฐานข้อมูล
