--- a/64030183/Labs/9.1 Constructor.md
+++ b/64030183/Labs/9.1 Constructor.md
@@ -43,6 +43,9 @@ namespace ConstructorExample
 }
 ```
 
+![image](https://user-images.githubusercontent.com/115066431/236665923-ab97ea7d-9f70-4feb-8260-e87e8d7b3c21.png)
+
+
 ## 9.1.2 Constructors with Parameters
 
 - Constructors มีฐานะเป็น method สามารถรับ parameters ได้เช่นเดียวกับ method ทั่วไป ใช้รูปแบบของพารามิเตอร์เช่นเดียวกับ method อื่น ๆ และสามารถทำ overloaded ได้    
@@ -90,6 +93,8 @@ namespace ConstructorExample
     }
 }
 ```
+![image](https://user-images.githubusercontent.com/115066431/236666299-741f87ed-0dd1-4d7c-a72f-7b95ac7bce34.png)
+
 
 ## 9.1.3 การใช้ this() เพื่อเรียก constructor
 
@@ -142,6 +147,8 @@ namespace ConstructorExample
     }
 }
 ```
+![image](https://user-images.githubusercontent.com/115066431/236665976-38f12400-551a-4857-875f-5da689cacdbf.png)
+
 
 ## 9.1.4 Static constructor
 
@@ -205,6 +212,8 @@ namespace ConstructorExample
     }
 }
 ```
+ ![image](https://user-images.githubusercontent.com/115066431/236666014-542b2d6d-2418-40d9-9788-b5e2012dc46c.png)
+
 
 ## 9.1.5 Object initializer
 
@@ -247,9 +256,24 @@ namespace ConstructorExample
 }
 
 ```
+    
+![image](https://user-images.githubusercontent.com/115066431/236666043-f2a0ce46-9347-4776-8913-7763a2405c27.png)
+
 
 ## คำถาม
 
 1. ท่านคิดว่าวิธีการทำ constructor overloading แล้วเรียกต่อกันเป็นทอดๆ จะช่วยอำนวยความสะดวกอะไรในการเขียนโปรแกรมของท่าน
-
+```cs
+จะช่วยให้เราสามารถสร้าง object ได้สะดวกและรวดเร็วมากขึ้น เพราะเราสามารถใช้ constructor ที่เหมาะสมกับการสร้าง object ในแต่ละกรณีได้ โดยไม่ต้องเขียน code ซ้ำซ้อนหรือไม่จำเป็น
+```
 2. เปรียบเทียบประโยชน์และข้อจำกัด ในการใช้ overloaded constructor และ Object initializer
+```cs
+Overloaded constructor:
+
+ประโยชน์: ช่วยให้สามารถกำหนดค่าให้กับ object ได้หลากหลายรูปแบบตามความต้องการ และสามารถสร้าง object ที่มีค่า default ได้ง่าย
+ข้อจำกัด: ต้องสร้าง constructor ใหม่ในกรณีที่ต้องการกำหนดค่าใหม่หรือเพิ่มพารามิเตอร์เข้าไป เมื่อพารามิเตอร์มีจำนวนมากอาจทำให้สับสน
+Object initializer:
+
+ประโยชน์: ช่วยให้สามารถกำหนดค่าให้กับ object ได้ง่ายและสะดวก โดยไม่ต้องสร้าง constructor ใหม่
+ข้อจำกัด: ไม่สามารถกำหนดค่า default ได้และไม่สามารถกำหนดค่าให้กับ property ที่มีเฉพาะ getter ได้
+```
