--- a/64030183/Labs/9.2 Indexer.md
+++ b/64030183/Labs/9.2 Indexer.md
@@ -83,6 +83,7 @@ namespace IndexerExample
     }
 }
 ```
+![image](https://user-images.githubusercontent.com/115066431/236666513-06ec7283-db73-4801-b0d3-b1bf2ad54c5d.png)
 
 ## 9.2.2 การใช้งาน Indexer
 
@@ -124,6 +125,7 @@ namespace IndexerExample
     }
 }
 ```
+![image](https://user-images.githubusercontent.com/115066431/236666525-641b558d-3eec-45c2-bcbe-c02016e7737b.png)
 
 ## 9.2.3 Indexer return ค่าแบบ tuple
 
@@ -173,6 +175,8 @@ namespace IndexerExample
     }
 }
 ```
+![image](https://user-images.githubusercontent.com/115066431/236666539-745cf69e-67f1-4947-8d11-1550a6758d5e.png)
+
 
 # 9.2.4 indexer overloading
 
@@ -248,7 +252,12 @@ namespace IndexerExample
     }
 }
 ```
+![image](https://user-images.githubusercontent.com/115066431/236666564-548cc4cd-067b-4de7-910e-29b9ab17d4f7.png)
+
 
 # คำถาม
 
 1. ท่านคิดว่าสามารถนำ Indexer ไปใช้ในงานอะไรได้บ้าง อธิบายตัวอย่าง (ไม่ต้องเขียน code)
+```cs
+ตัวอย่างการใช้ Indexer ได้แก่การเข้าถึงข้อมูลในอาร์เรย์ โดยที่ Indexer จะใช้เลข index เป็นตัวชี้ข้อมูล เช่น ถ้าเรามีอาร์เรย์ชื่อ myArray ขนาด 10 ตำแหน่ง และต้องการเข้าถึงค่าที่ตำแหน่งที่ 5 ในอาร์เรย์ เราสามารถใช้ Indexer โดยระบุตำแหน่ง index ของข้อมูลที่เราต้องการ ดังนี้ myArray[4] โดยที่เลข 4 คือตำแหน่ง index ที่เราต้องการ
+```
