--- a/Labs/9.2 Indexer.md
+++ b/Labs/9.2 Indexer.md
@@ -83,6 +83,8 @@ namespace IndexerExample
     }
 }
 ```
+![ภาพ](https://user-images.githubusercontent.com/112167732/236671977-12637c93-fe70-4828-922f-a95a3f92548b.png)
+
 
 ## 9.2.2 การใช้งาน Indexer
 
@@ -124,6 +126,8 @@ namespace IndexerExample
     }
 }
 ```
+![ภาพ](https://user-images.githubusercontent.com/112167732/236671985-ad621018-f75f-461e-b502-d0c49bfb6a5f.png)
+
 
 ## 9.2.3 Indexer return ค่าแบบ tuple
 
@@ -173,6 +177,8 @@ namespace IndexerExample
     }
 }
 ```
+![ภาพ](https://user-images.githubusercontent.com/112167732/236671991-5cec1c18-9328-47c0-bcf3-81f84fa2508f.png)
+
 
 # 9.2.4 indexer overloading
 
@@ -248,7 +254,12 @@ namespace IndexerExample
     }
 }
 ```
+![ภาพ](https://user-images.githubusercontent.com/112167732/236671999-a675b7f6-7aed-4843-b1a1-9c0ac2b6e2e5.png)
+
 
 # คำถาม
 
 1. ท่านคิดว่าสามารถนำ Indexer ไปใช้ในงานอะไรได้บ้าง อธิบายตัวอย่าง (ไม่ต้องเขียน code)
+```cs
+งานที่จำเป็นต้องดึงข้อมูลจำนวนมากออกมาแสดง
+```
