--- a/Labs/9.2 Indexer.md
+++ b/Labs/9.2 Indexer.md
@@ -261,5 +261,5 @@ namespace IndexerExample
 
 1. ท่านคิดว่าสามารถนำ Indexer ไปใช้ในงานอะไรได้บ้าง อธิบายตัวอย่าง (ไม่ต้องเขียน code)
 ```cs
-งานที่จำเป็นต้องดึงข้อมูลจำนวนมากออกมาแสดง
+งานที่จำเป็นต้องดึงข้อมูลจำนวนมากออกมาแสดง เช่น เว็บที่ต้องแสดงผล
 ```
