--- a/Labs/9.1 Constructor.md
+++ b/Labs/9.1 Constructor.md
@@ -42,6 +42,8 @@ namespace ConstructorExample
     }
 }
 ```
+![ภาพ](https://user-images.githubusercontent.com/112167732/236672272-5b10aa3a-88ef-4b3e-8eb8-fcfcce718973.png)
+
 
 ## 9.1.2 Constructors with Parameters
 
@@ -90,6 +92,9 @@ namespace ConstructorExample
     }
 }
 ```
+![ภาพ](https://user-images.githubusercontent.com/112167732/236672277-e3992b16-e466-483b-875b-63084beed07f.png)
+
+
 
 ## 9.1.3 การใช้ this() เพื่อเรียก constructor
 
@@ -142,7 +147,9 @@ namespace ConstructorExample
     }
 }
 ```
+![ภาพ](https://user-images.githubusercontent.com/112167732/236672287-c7c1cbb3-a041-46de-b2d5-bc7df2130d5d.png)
 
+    
 ## 9.1.4 Static constructor
 
 รันโปรแกรมตามตัวอย่างนี้และบันทึกผล
@@ -205,7 +212,9 @@ namespace ConstructorExample
     }
 }
 ```
+![ภาพ](https://user-images.githubusercontent.com/112167732/236672295-c03d625b-4667-4d0e-9545-ac559cb49f1d.png)
 
+    
 ## 9.1.5 Object initializer
 
 ในบางกรณี เราไม่สามารถสร้าง constructor หลายๆ ตัวเพื่อที่จะรับค่า parameters ที่แตกต่างกันเข้าสู่ object
@@ -247,10 +256,29 @@ namespace ConstructorExample
 }
 
 ```
+![ภาพ](https://user-images.githubusercontent.com/112167732/236672307-dd552bcd-da79-4cec-8c84-a744d1d8ce0b.png)
 
+    
 ## คำถาม
 
 
 1. ท่านคิดว่าวิธีการทำ constructor overloading แล้วเรียกต่อกันเป็นทอดๆ จะช่วยอำนวยความสะดวกอะไรในการเขียนโปรแกรมของท่าน
-
+```cs
+    ช่วยให้โปรแกรมทำงานได้มีประสิทธิภาพมากขึ้น
+```
 2. เปรียบเทียบประโยชน์และข้อจำกัด ในการใช้ overloaded constructor และ Object initializer
+```cs
+    overloaded constructor
+     ประโยชน์
+     - สามารถรองรับการป้อนค่าได้หลากหลาย
+     ข้อจำกัด
+     - โปรแกรมอาจจะทำงานได้ช้าลงหากมี overloaded constructor เป็นจำนวนมากเพราะจะทำให้โค้ดมีบรรทัดมากขึ้น
+     - โค้ดยาวและอ่านยาก
+ Object initializer
+     ประโยชน์
+     - ทำให้โค้ดสั้นลง อ่านง่าย
+     - ลดความผิดพลาดในการกำหนด properties โดยจพมีการตรวจสอบความถูกต้องก่อนกำหนดค่า
+     ข้อจำกัด
+     - ต้องกำหนดค่าทุก property ตอนที่สร้าง
+     - อาจสร้าง confusion ในกรณีที่มี property ที่มีชื่อซ้ำกันใน base class และ derived class หรือในกรณีที่มีการ inherit property จาก interface ที่มีชื่อซ้ำกัน
+    ```
