--- a/64030286/9.1 Constructor.md
+++ b/64030286/9.1 Constructor.md
@@ -42,6 +42,7 @@ namespace ConstructorExample
     }
 }
 ```
+![image](https://github.com/Pipaul1601/Week-09/assets/115067018/7552fc03-740c-41d8-aef2-f5cae45e595e)
 
 ## 9.1.2 Constructors with Parameters
 
@@ -90,6 +91,7 @@ namespace ConstructorExample
     }
 }
 ```
+![image](https://github.com/Pipaul1601/Week-09/assets/115067018/c8476d4e-0387-4c5c-8e96-e2061d709193)
 
 ## 9.1.3 การใช้ this() เพื่อเรียก constructor
 
@@ -142,6 +144,7 @@ namespace ConstructorExample
     }
 }
 ```
+![image](https://github.com/Pipaul1601/Week-09/assets/115067018/2ddd861f-355f-4609-ae0d-05388281df29)
 
 ## 9.1.4 Static constructor
 
@@ -205,6 +208,7 @@ namespace ConstructorExample
     }
 }
 ```
+![image](https://github.com/Pipaul1601/Week-09/assets/115067018/3ceeb653-f4b4-4f3a-8d22-2990f0b84ffd)
 
 ## 9.1.5 Object initializer
 
@@ -247,9 +251,23 @@ namespace ConstructorExample
 }
 
 ```
+![image](https://github.com/Pipaul1601/Week-09/assets/115067018/44a7b905-78ee-4f83-a245-8462169bb229)
 
 ## คำถาม
 
 1. ท่านคิดว่าวิธีการทำ constructor overloading แล้วเรียกต่อกันเป็นทอดๆ จะช่วยอำนวยความสะดวกอะไรในการเขียนโปรแกรมของท่าน
-
+ช่วยให้โปรแกรมทำงานได้มีประสิทธิภาพมากขึ้นโดยสามารถรับค่าที่หลากหลายได้และไม่ error หากรับค่าเกินที่กำหนดแต่แลกมาด้วยความที่โปรแกรมอาจจะช้าเนื่องจากต้องรันโค้ดหลายบรรทัดมากขึ้น
 2. เปรียบเทียบประโยชน์และข้อจำกัด ในการใช้ overloaded constructor และ Object initializer
+     overloaded constructor
+     ประโยชน์
+     - สามารถรองรับการป้อนค่าได้หลากหลาย
+     ข้อจำกัด
+     - โปรแกรมอาจจะทำงานได้ช้าลงหากมี overloaded constructor เป็นจำนวนมากเพราะจะทำให้โค้ดมีบรรทัดมากขึ้น
+     - โค้ดยาวและอ่านยาก
+ Object initializer
+     ประโยชน์
+     - ทำให้โค้ดสั้นลง อ่านง่าย
+     - ลดความผิดพลาดในการกำหนด properties โดยจพมีการตรวจสอบความถูกต้องก่อนกำหนดค่า
+     ข้อจำกัด
+     - ต้องกำหนดค่าทุก property ตอนที่สร้าง
+     - อาจสร้าง confusion ในกรณีที่มี property ที่มีชื่อซ้ำกันใน base class และ derived class หรือในกรณีที่มีการ inherit property จาก interface ที่มีชื่อซ้ำกัน
