--- a/64030286/9.2 Indexer.md
+++ b/64030286/9.2 Indexer.md
@@ -83,6 +83,7 @@ namespace IndexerExample
     }
 }
 ```
+![image](https://github.com/Pipaul1601/Week-09/assets/115067018/00b92c37-5b86-4ee1-a4d1-f9e6303426ff)
 
 ## 9.2.2 การใช้งาน Indexer
 
@@ -124,6 +125,7 @@ namespace IndexerExample
     }
 }
 ```
+![image](https://github.com/Pipaul1601/Week-09/assets/115067018/8139b7ce-688b-4ece-99e8-62fed20bc5b1)
 
 ## 9.2.3 Indexer return ค่าแบบ tuple
 
@@ -173,6 +175,7 @@ namespace IndexerExample
     }
 }
 ```
+![image](https://github.com/Pipaul1601/Week-09/assets/115067018/f702447e-7c9e-4989-8638-41db80d4646e)
 
 # 9.2.4 indexer overloading
 
@@ -248,7 +251,9 @@ namespace IndexerExample
     }
 }
 ```
+![image](https://github.com/Pipaul1601/Week-09/assets/115067018/7c0fa9f2-88d9-460a-b934-d2b7d214e935)
 
 # คำถาม
 
 1. ท่านคิดว่าสามารถนำ Indexer ไปใช้ในงานอะไรได้บ้าง อธิบายตัวอย่าง (ไม่ต้องเขียน code)
+งานที่จำเป้นต้องดึงข้อมูลจำนวนมากออกมาแสดง เช่น โปรแกรมเช็คสต๊อคสินค้าใช้ indexer เพื่อค้นหาข้อมูลจากฐานข้อมูล
