--- a/64030207/9.1 Constructor.md
+++ b/64030207/9.1 Constructor.md
@@ -42,7 +42,7 @@ namespace ConstructorExample
     }
 }
 ```
-<img width="795" alt="Screenshot 2566-05-03 at 22 26 01" src="https://user-images.githubusercontent.com/115066261/235963197-09ff47d6-d937-4fbd-b2a4-fe6d40a36bae.png">
+![ภาพ](https://github.com/Sittinon-Sawatdemongkol/Week-09/assets/115066278/fb7bc260-49cd-419a-9b57-38f11bafb32a)
 
 
 ## 9.1.2 Constructors with Parameters
@@ -92,7 +92,7 @@ namespace ConstructorExample
     }
 }
 ```
-<img width="821" alt="Screenshot 2566-05-03 at 22 56 22" src="https://user-images.githubusercontent.com/115066261/235971184-b8ead173-f3fa-4c63-8104-daf61e35e9d3.png">
+![ภาพ](https://github.com/Sittinon-Sawatdemongkol/Week-09/assets/115066278/337acd04-7f51-4234-be30-7722a0404e18)
 
 
 ## 9.1.3 การใช้ this() เพื่อเรียก constructor
@@ -146,7 +146,7 @@ namespace ConstructorExample
     }
 }
 ```
-![image](https://user-images.githubusercontent.com/115066261/235972512-cf704d87-4a3c-4e68-a651-86163037a495.png)
+![ภาพ](https://github.com/Sittinon-Sawatdemongkol/Week-09/assets/115066278/a7f1f5d3-0535-4d28-82bd-0080eec7fe01)
 
 ## 9.1.4 Static constructor
 
@@ -210,7 +210,7 @@ namespace ConstructorExample
     }
 }
 ```
-![image](https://user-images.githubusercontent.com/115066261/235973422-f2999426-9afd-4ff3-975b-ceab4dee02c4.png)
+![ภาพ](https://github.com/Sittinon-Sawatdemongkol/Week-09/assets/115066278/ff679f31-4d03-4f4f-a7b7-34301425dcca)
 
 ## 9.1.5 Object initializer
 
@@ -253,7 +253,7 @@ namespace ConstructorExample
 }
 
 ```
-![image](https://user-images.githubusercontent.com/115066261/235974153-60d7d6df-90aa-44d5-83e6-7a7acf46d492.png)
+![ภาพ](https://github.com/Sittinon-Sawatdemongkol/Week-09/assets/115066278/65d3f0ee-c91d-48d5-b7a3-3c03ac2344d4)
 
 ## คำถาม
 
