--- a/64030207/9.2 Indexer.md
+++ b/64030207/9.2 Indexer.md
@@ -83,8 +83,7 @@ namespace IndexerExample
     }
 }
 ```
-![image](https://user-images.githubusercontent.com/115066261/235986085-77155888-0f24-4e7f-90de-7f65278c7a21.png)
-
+![ภาพ](https://github.com/Sittinon-Sawatdemongkol/Week-09/assets/115066278/ca5f7d25-7a63-47f6-8e14-9eec7074b63a)
 ## 9.2.2 การใช้งาน Indexer
 
 รันโปรแกรมตามตัวอย่างนี้และบันทึกผล
@@ -125,8 +124,7 @@ namespace IndexerExample
     }
 }
 ```
-<img width="630" alt="Screenshot 2566-05-03 at 23 57 45" src="https://user-images.githubusercontent.com/115066261/235986814-7bbc4952-fd05-4b09-87fa-d0b1e104e43a.png">
-
+![ภาพ](https://github.com/Sittinon-Sawatdemongkol/Week-09/assets/115066278/41a00148-e87a-4cd2-af69-047be76f2ff1)
 ## 9.2.3 Indexer return ค่าแบบ tuple
 
 รันโปรแกรมตามตัวอย่างนี้และบันทึกผล
@@ -175,7 +173,7 @@ namespace IndexerExample
     }
 }
 ```
-![image](https://user-images.githubusercontent.com/115066261/235987090-2e94b2fb-3dfd-470b-95fd-9d7f7d836294.png)
+![ภาพ](https://github.com/Sittinon-Sawatdemongkol/Week-09/assets/115066278/71751144-f845-4416-aaad-678867f48826)
 
 # 9.2.4 indexer overloading
 
@@ -251,7 +249,7 @@ namespace IndexerExample
     }
 }
 ```
-![image](https://user-images.githubusercontent.com/115066261/235987991-fee7aa7e-052d-447a-8a43-134a64e8f63a.png)
+![ภาพ](https://github.com/Sittinon-Sawatdemongkol/Week-09/assets/115066278/89627c89-12f8-4057-a6ec-37143b723801)
 
 # คำถาม
 
