--- a/64030278/9.1 Constructor.md
+++ b/64030278/9.1 Constructor.md
@@ -42,7 +42,7 @@ namespace ConstructorExample
     }
 }
 ```
-![](./Pictures/Lab9_1.png)
+![image](https://github.com/Poramat45/Week-09/assets/115066249/4b23eb27-7458-476e-9d0b-35001afc3434)
 
 ## 9.1.2 Constructors with Parameters
 
@@ -91,7 +91,7 @@ namespace ConstructorExample
     }
 }
 ```
-![](./Pictures/Lab9_2.png)
+![image](https://github.com/Poramat45/Week-09/assets/115066249/61e74022-8004-4c12-8d3f-464b1a4f63d9)
 
 ## 9.1.3 การใช้ this() เพื่อเรียก constructor
 
@@ -144,7 +144,7 @@ namespace ConstructorExample
     }
 }
 ```
-![](./Pictures/Lab9_3.png)
+![image](https://github.com/Poramat45/Week-09/assets/115066249/fc38a5dd-a80d-47b2-b133-f3aafe9d5320)
 
 ## 9.1.4 Static constructor
 
@@ -208,7 +208,7 @@ namespace ConstructorExample
     }
 }
 ```
-![](./Pictures/Lab9_4.png)
+![image](https://github.com/Poramat45/Week-09/assets/115066249/602f4e65-96fb-4497-af32-1c20dc21c896)
 
 ## 9.1.5 Object initializer
 
@@ -251,7 +251,7 @@ namespace ConstructorExample
 }
 
 ```
-![](./Pictures/Lab9_5.png)
+![image](https://github.com/Poramat45/Week-09/assets/115066249/c1e73bf1-37b7-49e5-a632-3496ee3798f9)
 
 ## คำถาม
 
