--- a/64030278/9.2 Indexer.md
+++ b/64030278/9.2 Indexer.md
@@ -83,7 +83,7 @@ namespace IndexerExample
     }
 }
 ```
-![](./Pictures/Lab9_6.png)
+![image](https://github.com/Poramat45/Week-09/assets/115066249/81c42ecd-ad61-4a08-ad27-b64d63f7e960)
 
 ## 9.2.2 การใช้งาน Indexer
 
@@ -125,7 +125,7 @@ namespace IndexerExample
     }
 }
 ```
-![](./Pictures/Lab9_7.png)
+![image](https://github.com/Poramat45/Week-09/assets/115066249/c2d1ecd6-0b43-4cd9-a04f-6185238a4499)
 
 ## 9.2.3 Indexer return ค่าแบบ tuple
 
@@ -175,7 +175,7 @@ namespace IndexerExample
     }
 }
 ```
-![](./Pictures/Lab9_8.png)
+![image](https://github.com/Poramat45/Week-09/assets/115066249/c4d5d23b-e7c9-4c46-a853-b22e0ea66fbb)
 
 # 9.2.4 indexer overloading
 
@@ -251,7 +251,7 @@ namespace IndexerExample
     }
 }
 ```
-![](./Pictures/Lab9_9.png)
+![image](https://github.com/Poramat45/Week-09/assets/115066249/b2b47237-3535-41f0-931c-27fc0e6e9018)
 
 # คำถาม
 
