--- a/64030244/Labs/9.1 Constructor.md
+++ b/64030244/Labs/9.1 Constructor.md
@@ -43,6 +43,8 @@ namespace ConstructorExample
 }
 ```
 
+![image](https://github.com/CHAIYAPRUK/Week-09/assets/115066395/256d1544-99f5-4e34-aab1-28a88d4666c6)
+
 ## 9.1.2 Constructors with Parameters
 
 - Constructors มีฐานะเป็น method สามารถรับ parameters ได้เช่นเดียวกับ method ทั่วไป ใช้รูปแบบของพารามิเตอร์เช่นเดียวกับ method อื่น ๆ และสามารถทำ overloaded ได้    
@@ -90,6 +92,9 @@ namespace ConstructorExample
     }
 }
 ```
+
+![image](https://github.com/CHAIYAPRUK/Week-09/assets/115066395/13f72092-e341-4574-9158-57c5dd8dc3f9)
+
 
 ## 9.1.3 การใช้ this() เพื่อเรียก constructor
 
@@ -142,6 +147,9 @@ namespace ConstructorExample
     }
 }
 ```
+    
+![image](https://github.com/CHAIYAPRUK/Week-09/assets/115066395/49615e32-8e63-4b94-95ba-d9682a65f3f2)
+
 
 ## 9.1.4 Static constructor
 
@@ -206,6 +214,9 @@ namespace ConstructorExample
 }
 ```
 
+![image](https://github.com/CHAIYAPRUK/Week-09/assets/115066395/9325f689-65a6-43ce-8ce0-58aef1fc054e)
+
+    
 ## 9.1.5 Object initializer
 
 ในบางกรณี เราไม่สามารถสร้าง constructor หลายๆ ตัวเพื่อที่จะรับค่า parameters ที่แตกต่างกันเข้าสู่ object
@@ -248,8 +259,20 @@ namespace ConstructorExample
 
 ```
 
+![image](https://github.com/CHAIYAPRUK/Week-09/assets/115066395/da3ccd0b-60a6-4115-a140-00d1206df369)
+
 ## คำถาม
 
 1. ท่านคิดว่าวิธีการทำ constructor overloading แล้วเรียกต่อกันเป็นทอดๆ จะช่วยอำนวยความสะดวกอะไรในการเขียนโปรแกรมของท่าน
+    
+ ช่วยให้โปรแกรมทำงานได้มีประสิทธิภาพมากขึ้นโดยสามารถรับค่าที่หลากหลายได้และไม่ error หากรับค่าเกินที่กำหนดแต่แลกมาด้วยความที่โปรแกรมอาจจะช้าเนื่องจากต้องรันโค้ดหลายบรรทัดมากขึ้น
 
 2. เปรียบเทียบประโยชน์และข้อจำกัด ในการใช้ overloaded constructor และ Object initializer
+    
+ สามารถรองรับการป้อนค่าได้หลากหลาย ข้อจำกัด
+โปรแกรมอาจจะทำงานได้ช้าลงหากมี overloaded constructor เป็นจำนวนมากเพราะจะทำให้โค้ดมีบรรทัดมากขึ้น
+โค้ดยาวและอ่านยาก Object initializer ประโยชน์
+ทำให้โค้ดสั้นลง อ่านง่าย
+ลดความผิดพลาดในการกำหนด properties โดยจพมีการตรวจสอบความถูกต้องก่อนกำหนดค่า ข้อจำกัด
+ต้องกำหนดค่าทุก property ตอนที่สร้าง
+อาจสร้าง confusion ในกรณีที่มี property ที่มีชื่อซ้ำกันใน base class และ derived class หรือในกรณีที่มีการ inherit property จาก interface ที่มีชื่อซ้ำกัน 
