--- a/64030244/Labs/9.2 Indexer.md
+++ b/64030244/Labs/9.2 Indexer.md
@@ -84,6 +84,9 @@ namespace IndexerExample
 }
 ```
 
+![image](https://github.com/CHAIYAPRUK/Week-09/assets/115066395/454881ab-b53e-4e97-93f3-901bbbe37a45)
+
+
 ## 9.2.2 การใช้งาน Indexer
 
 รันโปรแกรมตามตัวอย่างนี้และบันทึกผล
@@ -124,6 +127,9 @@ namespace IndexerExample
     }
 }
 ```
+
+![image](https://github.com/CHAIYAPRUK/Week-09/assets/115066395/84ba8dac-7fde-4a9b-a05e-fa53314888df)
+
 
 ## 9.2.3 Indexer return ค่าแบบ tuple
 
@@ -173,6 +179,9 @@ namespace IndexerExample
     }
 }
 ```
+
+![image](https://github.com/CHAIYAPRUK/Week-09/assets/115066395/03711042-5262-45cc-a84d-c3a100729282)
+
 
 # 9.2.4 indexer overloading
 
@@ -249,6 +258,10 @@ namespace IndexerExample
 }
 ```
 
+![image](https://github.com/CHAIYAPRUK/Week-09/assets/115066395/7a97d946-3e9c-4362-adc2-4273f3ddeb49)
+
 # คำถาม
 
 1. ท่านคิดว่าสามารถนำ Indexer ไปใช้ในงานอะไรได้บ้าง อธิบายตัวอย่าง (ไม่ต้องเขียน code)
+
+งานที่จำเป้นต้องดึงข้อมูลจำนวนมากออกมาแสดง เช่น โปรแกรมเช็คสต๊อคสินค้าใช้ indexer เพื่อค้นหาข้อมูลจากฐานข้อมูล
