--- a/64030119/Labs/9.1 Constructor.md
+++ b/64030119/Labs/9.1 Constructor.md
@@ -42,6 +42,8 @@ namespace ConstructorExample
     }
 }
 ```
+![image](https://github.com/PiyatidaPh/Week-09/assets/115066285/add62fe0-ac0a-4b0b-bfc6-fc245231dfc4)
+
 
 ## 9.1.2 Constructors with Parameters
 
@@ -90,6 +92,7 @@ namespace ConstructorExample
     }
 }
 ```
+![image](https://github.com/PiyatidaPh/Week-09/assets/115066285/1efd9f9b-3394-4da5-9a2d-3298a571fd3e)
 
 ## 9.1.3 การใช้ this() เพื่อเรียก constructor
 
@@ -142,6 +145,7 @@ namespace ConstructorExample
     }
 }
 ```
+![image](https://github.com/PiyatidaPh/Week-09/assets/115066285/d2861591-4e93-4bca-b00f-076f3279cf07)
 
 ## 9.1.4 Static constructor
 
@@ -205,6 +209,7 @@ namespace ConstructorExample
     }
 }
 ```
+![image](https://github.com/PiyatidaPh/Week-09/assets/115066285/3870a215-9924-4c52-aaa5-1d42bc633349)
 
 ## 9.1.5 Object initializer
 
@@ -247,9 +252,27 @@ namespace ConstructorExample
 }
 
 ```
+![image](https://github.com/PiyatidaPh/Week-09/assets/115066285/e0e87af6-8d49-4edf-991b-b0227384eb00)
 
 ## คำถาม
 
 1. ท่านคิดว่าวิธีการทำ constructor overloading แล้วเรียกต่อกันเป็นทอดๆ จะช่วยอำนวยความสะดวกอะไรในการเขียนโปรแกรมของท่าน
-
+```
+ ช่วยให้โปรแกรมทำงานได้มีประสิทธิภาพมากขึ้นโดยสามารถรับค่าที่หลากหลายได้และไม่ error หากรับค่ามากเกินที่กำหนดแต่แลกมาด้วยความที่โปรแกรมอาจจะช้าเนื่องจากต้องรันโค้ดหลายบรรทัดมาก
+```
 2. เปรียบเทียบประโยชน์และข้อจำกัด ในการใช้ overloaded constructor และ Object initializer
+```
+ overloaded constructor
+     ประโยชน์
+     - สามารถรองรับการป้อนค่าได้หลากหลาย
+     ข้อจำกัด
+     - โปรแกรมอาจจะทำงานได้ช้าลงหากมี overloaded constructor เป็นจำนวนมากเพราะจะทำให้โค้ดมีบรรทัดมากขึ้น
+     - โค้ดยาวและอ่านยาก
+ Object initializer
+     ประโยชน์
+     - ทำให้โค้ดสั้นลง อ่านง่าย
+     - ลดความผิดพลาดในการกำหนด properties โดยจพมีการตรวจสอบความถูกต้องก่อนกำหนดค่า
+     ข้อจำกัด
+     - ต้องกำหนดค่าทุก property ตอนที่สร้าง
+     - อาจสร้าง confusion ในกรณีที่มี property ที่มีชื่อซ้ำกันใน base class และ derived class หรือในกรณีที่มีการ inherit property จาก interface ที่มีชื่อซ้ำกัน
+```
