--- a/64030119/Labs/9.2 Indexer.md
+++ b/64030119/Labs/9.2 Indexer.md
@@ -83,6 +83,7 @@ namespace IndexerExample
     }
 }
 ```
+![image](https://github.com/PiyatidaPh/Week-09/assets/115066285/af8f0ef2-ceee-43b6-80de-57fb6d54e759)
 
 ## 9.2.2 การใช้งาน Indexer
 
@@ -124,6 +125,7 @@ namespace IndexerExample
     }
 }
 ```
+![image](https://github.com/PiyatidaPh/Week-09/assets/115066285/0e50e69e-463b-4ab5-a714-308600240427)
 
 ## 9.2.3 Indexer return ค่าแบบ tuple
 
@@ -173,6 +175,7 @@ namespace IndexerExample
     }
 }
 ```
+![image](https://github.com/PiyatidaPh/Week-09/assets/115066285/c2c011e0-b1b6-4b56-866b-7b4575eb1ece)
 
 # 9.2.4 indexer overloading
 
@@ -248,7 +251,11 @@ namespace IndexerExample
     }
 }
 ```
+![image](https://github.com/PiyatidaPh/Week-09/assets/115066285/1e353fb8-b2df-4e91-a087-bf6567f3540e)
 
 # คำถาม
 
 1. ท่านคิดว่าสามารถนำ Indexer ไปใช้ในงานอะไรได้บ้าง อธิบายตัวอย่าง (ไม่ต้องเขียน code)
+```
+งานที่จำเป็นต้องดึงข้อมูลจำนวนมากออกมาแสดง เช่น โปรแกรมเช็คสต็อกสินค้าโดยใช้ indexer เพื่อค้นหาข้อมูลจากฐานข้อมูล
+```
