--- a/64030213_SutheraBml/Labs/9.1 Constructor.md
+++ b/64030213_SutheraBml/Labs/9.1 Constructor.md
@@ -42,6 +42,7 @@ namespace ConstructorExample
     }
 }
 ```
+![image](https://github.com/Suthera213/Week-09/assets/115066359/3a0b3942-1a6d-4eb2-8146-dd9da2fbc4e4)
 
 ## 9.1.2 Constructors with Parameters
 
@@ -90,6 +91,7 @@ namespace ConstructorExample
     }
 }
 ```
+![image](https://github.com/Suthera213/Week-09/assets/115066359/c002496f-2e2e-430e-9974-8020b2835a6f)
 
 ## 9.1.3 การใช้ this() เพื่อเรียก constructor
 
@@ -142,6 +144,7 @@ namespace ConstructorExample
     }
 }
 ```
+![image](https://github.com/Suthera213/Week-09/assets/115066359/9ace4964-37ba-45dc-8084-0df959a0e3cc)
 
 ## 9.1.4 Static constructor
 
@@ -205,6 +208,7 @@ namespace ConstructorExample
     }
 }
 ```
+![image](https://github.com/Suthera213/Week-09/assets/115066359/e4aeef89-f3b2-46b7-b6a2-5b540e2f064f)
 
 ## 9.1.5 Object initializer
 
@@ -247,9 +251,27 @@ namespace ConstructorExample
 }
 
 ```
+![image](https://github.com/Suthera213/Week-09/assets/115066359/c1215983-3e5e-4107-a6ab-819a22a345bb)
 
 ## คำถาม
 
 1. ท่านคิดว่าวิธีการทำ constructor overloading แล้วเรียกต่อกันเป็นทอดๆ จะช่วยอำนวยความสะดวกอะไรในการเขียนโปรแกรมของท่าน
-
+```
+    ช่วยให้โปรแกรมทำงานได้มีประสิทธิภาพมากขึ้นโดยสามารถรับค่าที่หลากหลายได้และไม่ error หากรับค่าเกินที่กำหนดแต่แลกมาด้วยความที่โปรแกรมอาจจะช้าเนื่องจากต้องรันโค้ดหลายบรรทัดมากขึ้น
+```
 2. เปรียบเทียบประโยชน์และข้อจำกัด ในการใช้ overloaded constructor และ Object initializer
+```
+     overloaded constructor
+     ประโยชน์
+     - สามารถรองรับการป้อนค่าได้หลากหลาย
+     ข้อจำกัด
+     - โปรแกรมอาจจะทำงานได้ช้าลงหากมี overloaded constructor เป็นจำนวนมากเพราะจะทำให้โค้ดมีบรรทัดมากขึ้น
+     - โค้ดยาวและอ่านยาก
+ Object initializer
+     ประโยชน์
+     - ทำให้โค้ดสั้นลง อ่านง่าย
+     - ลดความผิดพลาดในการกำหนด properties โดยจพมีการตรวจสอบความถูกต้องก่อนกำหนดค่า
+     ข้อจำกัด
+     - ต้องกำหนดค่าทุก property ตอนที่สร้าง
+     - อาจสร้าง confusion ในกรณีที่มี property ที่มีชื่อซ้ำกันใน base class และ derived class หรือในกรณีที่มีการ inherit property จาก interface ที่มีชื่อซ้ำกัน
+```
