--- a/64030213_SutheraBml/Labs/9.2 Indexer.md
+++ b/64030213_SutheraBml/Labs/9.2 Indexer.md
@@ -83,6 +83,7 @@ namespace IndexerExample
     }
 }
 ```
+![image](https://github.com/Suthera213/Week-09/assets/115066359/5750f4ad-05f4-463e-9f31-e3924ca3f82f)
 
 ## 9.2.2 การใช้งาน Indexer
 
@@ -124,6 +125,7 @@ namespace IndexerExample
     }
 }
 ```
+![image](https://github.com/Suthera213/Week-09/assets/115066359/6581f5d9-5018-45ac-b7cd-3f560552be2a)
 
 ## 9.2.3 Indexer return ค่าแบบ tuple
 
@@ -173,6 +175,7 @@ namespace IndexerExample
     }
 }
 ```
+![image](https://github.com/Suthera213/Week-09/assets/115066359/9b2c5a6a-73f8-44bc-8cf3-a1cddea0c9b8)
 
 # 9.2.4 indexer overloading
 
@@ -248,7 +251,11 @@ namespace IndexerExample
     }
 }
 ```
+![image](https://github.com/Suthera213/Week-09/assets/115066359/802145cb-6b51-4dd5-ad20-4c123be305bc)
 
 # คำถาม
 
 1. ท่านคิดว่าสามารถนำ Indexer ไปใช้ในงานอะไรได้บ้าง อธิบายตัวอย่าง (ไม่ต้องเขียน code)
+```
+งานที่จำเป้นต้องดึงข้อมูลจำนวนมากออกมาแสดง ตัวอย่างเช่น โปรแกรมเช็คสต๊อคสินค้าใช้ indexer เพื่อค้นหาข้อมูลจากฐานข้อมูล
+```
