--- a/64030074/9.1 Constructor.md
+++ b/64030074/9.1 Constructor.md
@@ -42,6 +42,7 @@ namespace ConstructorExample
     }
 }
 ```
+![image](https://github.com/tnpn2545/Week-09/assets/115066414/e7383403-9b38-4b55-826b-a5a21dc1f8b6)
 
 ## 9.1.2 Constructors with Parameters
 
@@ -90,6 +91,7 @@ namespace ConstructorExample
     }
 }
 ```
+![image](https://github.com/tnpn2545/Week-09/assets/115066414/c1d86ba1-25c6-457d-a8ad-4475ec543147)
 
 ## 9.1.3 การใช้ this() เพื่อเรียก constructor
 
@@ -142,6 +144,7 @@ namespace ConstructorExample
     }
 }
 ```
+![image](https://github.com/tnpn2545/Week-09/assets/115066414/2db9d814-e5d6-436f-b150-89e58c5beff2)
 
 ## 9.1.4 Static constructor
 
@@ -205,6 +208,7 @@ namespace ConstructorExample
     }
 }
 ```
+![image](https://github.com/tnpn2545/Week-09/assets/115066414/1942b929-38a0-482c-b7e2-7ac134cdabe0)
 
 ## 9.1.5 Object initializer
 
@@ -247,9 +251,26 @@ namespace ConstructorExample
 }
 
 ```
+![image](https://github.com/tnpn2545/Week-09/assets/115066414/a05e5d82-317b-4a3d-9e07-41a4577d1208)
 
 ## คำถาม
 
 1. ท่านคิดว่าวิธีการทำ constructor overloading แล้วเรียกต่อกันเป็นทอดๆ จะช่วยอำนวยความสะดวกอะไรในการเขียนโปรแกรมของท่าน
-
+    - สะดวกในการสร้างอ็อบเจ็กต์
+    - การรองรับการกำหนดค่าเริ่มต้น
+    - เพิ่มความยืดหยุ่นในการใช้งาน
 2. เปรียบเทียบประโยชน์และข้อจำกัด ในการใช้ overloaded constructor และ Object initializer
+    - ประโยชน์ของ overloaded constructor
+        - สร้างความยืดหยุ่นในการสร้างอ็อบเจ็กต์
+        - กำหนดค่าเริ่มต้นและตรวจสอบข้อยกเว้น
+    - ข้อจำกัดของ overloaded constructor
+        - การเพิ่มจำนวน constructor
+    
+    - ประโยชน์ของ object initializer
+        - สะดวกและเร็วกับการกำหนดค่าเริ่มต้น
+        - ความยืดหยุ่นในการกำหนดค่า
+        - ลดจำนวนโค้ดที่ซ้ำซ้อน
+   - ข้อจำกัดของ object initializer
+        - ไม่สามารถทำการตรวจสอบข้อยกเว้นได้
+        - ไม่สามารถเรียกใช้โค้ดที่ซับซ้อนได้
+        - ไม่สามารถกำหนดค่าเริ่มต้นแบบเงื่อนไขได้
