--- a/64030074/9.2 Indexer.md
+++ b/64030074/9.2 Indexer.md
@@ -83,6 +83,7 @@ namespace IndexerExample
     }
 }
 ```
+![image](https://github.com/tnpn2545/Week-09/assets/115066414/74a0ab32-b03d-4383-a9ec-31d8e0cd979c)
 
 ## 9.2.2 การใช้งาน Indexer
 
@@ -124,6 +125,7 @@ namespace IndexerExample
     }
 }
 ```
+![image](https://github.com/tnpn2545/Week-09/assets/115066414/8b8abee9-b768-4bf1-a4d5-ee70f056229b)
 
 ## 9.2.3 Indexer return ค่าแบบ tuple
 
@@ -173,6 +175,8 @@ namespace IndexerExample
     }
 }
 ```
+![image](https://github.com/tnpn2545/Week-09/assets/115066414/40dfb7ac-17ba-4a5b-9c9c-f0cf6f4f365f)
+
 
 # 9.2.4 indexer overloading
 
@@ -248,7 +252,14 @@ namespace IndexerExample
     }
 }
 ```
+![image](https://github.com/tnpn2545/Week-09/assets/115066414/71a1f940-ae59-4f45-a187-ca932ca80fe2)
 
 # คำถาม
 
 1. ท่านคิดว่าสามารถนำ Indexer ไปใช้ในงานอะไรได้บ้าง อธิบายตัวอย่าง (ไม่ต้องเขียน code)
+  - การเข้าถึงข้อมูลในอาร์เรย์
+    - สามารถใช้ในการเข้าถึงข้อมูลในอาร์เรย์โดยใช้ตัวชี้ในรูปแบบของตัวเลข ซึ่งช่วยให้เราสามารถอ่านค่าหรือแก้ไขค่าในตำแหน่งที่ต้องการของอาร์เรย์ได้โดยตรง โดยไม่ต้องเขียนโค้ดซ้ำซ้อนเพื่อเข้าถึงแต่ละตำแหน่งของอาร์เรย์
+  - การเข้าถึงข้อมูลในคอลเลกชัน
+    - สามารถใช้ในการเข้าถึงข้อมูลในคอลเลกชันอื่นๆ เช่น ลิสต์ (list), คิว (queue), และสแต็ก (stack) โดยใช้ตัวชี้เป็นตัวบอกตำแหน่งของข้อมูลในคอลเลกชัน ซึ่งช่วยให้เราสามารถเพิ่มหรือลบข้อมูลได้ในตำแหน่งที่ต้องการ หรือสามารถเรียกใช้ข้อมูลโดยตรงที่ตำแหน่งที่ต้องการ
+  - การเข้าถึงข้อมูลในคลาส
+    - สามารถใช้ในการเข้าถึงข้อมูลในคลาสหรือโครงสร้างข้อมูลที่เรากำหนดเอง โดยใช้ตัวชี้ที่เกี่ยวข้องกับโครงสร้างข้อมูล
