--- a/64030318/Labs/9.1 Constructor.md
+++ b/64030318/Labs/9.1 Constructor.md
@@ -42,6 +42,7 @@ namespace ConstructorExample
     }
 }
 ```
+![image](https://github.com/suwithirunrat/Week-09/assets/116150760/46fec0f3-1511-46c7-8400-5408336a3ae0)
 
 ## 9.1.2 Constructors with Parameters
 
@@ -90,6 +91,7 @@ namespace ConstructorExample
     }
 }
 ```
+![image](https://github.com/suwithirunrat/Week-09/assets/116150760/a6dee1a8-bd79-48ea-87ab-164a93514fe6)
 
 ## 9.1.3 การใช้ this() เพื่อเรียก constructor
 
@@ -142,6 +144,7 @@ namespace ConstructorExample
     }
 }
 ```
+![image](https://github.com/suwithirunrat/Week-09/assets/116150760/63df3cc7-0de7-4490-b38f-24e61d5dd0d0)
 
 ## 9.1.4 Static constructor
 
@@ -205,6 +208,7 @@ namespace ConstructorExample
     }
 }
 ```
+![image](https://github.com/suwithirunrat/Week-09/assets/116150760/70d0b12c-2006-4d9e-9528-dc562b041e3f)
 
 ## 9.1.5 Object initializer
 
@@ -247,9 +251,17 @@ namespace ConstructorExample
 }
 
 ```
+![image](https://github.com/suwithirunrat/Week-09/assets/116150760/7a9d903f-8605-4bfb-89a6-881f43eecbad)
 
 ## คำถาม
 
 1. ท่านคิดว่าวิธีการทำ constructor overloading แล้วเรียกต่อกันเป็นทอดๆ จะช่วยอำนวยความสะดวกอะไรในการเขียนโปรแกรมของท่าน
-
+ช่วยให้โปรแกรมทำงานได้มีประสิทธิภาพมากขึ้นโดยสามารถรับค่าที่หลากหลายได้และไม่ error หากรับค่าเกินที่กำหนดแต่แลกมาด้วยความที่โปรแกรมอาจจะช้าเนื่องจากต้องรันโค้ดหลายบรรทัดมากขึ้น
 2. เปรียบเทียบประโยชน์และข้อจำกัด ในการใช้ overloaded constructor และ Object initializer
+    สามารถรองรับการป้อนค่าได้หลากหลาย ข้อจำกัด
+โปรแกรมอาจจะทำงานได้ช้าลงหากมี overloaded constructor เป็นจำนวนมากเพราะจะทำให้โค้ดมีบรรทัดมากขึ้น
+โค้ดยาวและอ่านยาก Object initializer ประโยชน์
+ทำให้โค้ดสั้นลง อ่านง่าย
+ลดความผิดพลาดในการกำหนด properties โดยจพมีการตรวจสอบความถูกต้องก่อนกำหนดค่า ข้อจำกัด
+ต้องกำหนดค่าทุก property ตอนที่สร้าง
+อาจสร้าง confusion ในกรณีที่มี property ที่มีชื่อซ้ำกันใน base class และ derived class หรือในกรณีที่มีการ inherit property จาก interface ที่มีชื่อซ้ำกัน
