--- a/64030318/Labs/9.2 Indexer.md
+++ b/64030318/Labs/9.2 Indexer.md
@@ -83,6 +83,7 @@ namespace IndexerExample
     }
 }
 ```
+![image](https://github.com/suwithirunrat/Week-09/assets/116150760/d64f7c4c-9a5e-44ff-8406-7530e8dd347b)
 
 ## 9.2.2 การใช้งาน Indexer
 
@@ -124,6 +125,7 @@ namespace IndexerExample
     }
 }
 ```
+![image](https://github.com/suwithirunrat/Week-09/assets/116150760/43a4e325-6f91-4149-852f-0af4a99a3142)
 
 ## 9.2.3 Indexer return ค่าแบบ tuple
 
@@ -173,6 +175,7 @@ namespace IndexerExample
     }
 }
 ```
+![image](https://github.com/suwithirunrat/Week-09/assets/116150760/7afb9861-908b-4776-9b96-d3e03aeccb78)
 
 # 9.2.4 indexer overloading
 
@@ -248,7 +251,9 @@ namespace IndexerExample
     }
 }
 ```
+![image](https://github.com/suwithirunrat/Week-09/assets/116150760/e2b441de-622d-4e2d-a04f-c241a6b7f187)
 
 # คำถาม
 
 1. ท่านคิดว่าสามารถนำ Indexer ไปใช้ในงานอะไรได้บ้าง อธิบายตัวอย่าง (ไม่ต้องเขียน code)
+2. งานที่จำเป้นต้องดึงข้อมูลจำนวนมากออกมาแสดง เช่น โปรแกรมเช็คสต๊อคสินค้าใช้ indexer เพื่อค้นหาข้อมูลจากฐานข้อมูล
